--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -9,7 +9,8 @@
     <%= icon_with_text("search", "検索条件") %>
   </div>
   <div class="card-body">
-    <%= search_form_for @search do |f| %>
+    <%# data-turbo-frame属性を指定する %>
+    <%= search_form_for @search, html: { data: { turbo_frame: "cats-list" } } do |f| %>
       <div class="row g3 mb-3">
         <div class="col-4 col-xl-2">
           <%= f.label :name_cont, "名前", class: "form-label" %>
