--- a/app/views/cats/update.turbo_stream.erb
+++ b/app/views/cats/update.turbo_stream.erb
@@ -1,3 +1,5 @@
 <% # 内部的にはパーシャルがrenderされる（renderを省略した書き方） %>
 <% # https://zenn.dev/shita1112/books/cat-hotwire-turbo/viewer/tutorial-2#1.-turbo_stream.replace%E3%81%A8%E3%81%84%E3%81%86%E3%83%A1%E3%82%BD%E3%83%83%E3%83%89%E3%82%92%E4%BD%BF%E3%81%A3%E3%81%A6%E3%81%84%E3%82%8B %>
 <%= turbo_stream.replace @cat %>
+<% # #flash を _flash.html.erb のレンダリング結果で update %>
+<%= turbo_stream_flash %>
