--- a/app/views/cats/edit.html.erb
+++ b/app/views/cats/edit.html.erb
@@ -1,12 +1,3 @@
-<% content_for :title, "Editing cat" %>
-
-<h1>Editing cat</h1>
-
-<%= render "form", cat: @cat %>
-
-<br>
-
-<div>
-  <%= link_to "Show this cat", @cat %> |
-  <%= link_to "Back to cats", cats_path %>
-</div>
+<%= render "modal", title: "編集" do %>
+  <%= render "form", cat: @cat %>
+<% end %>
